plugins {
    id 'java'
    id 'application'
}

group = 'org.sun.ghosh.virtualthreads'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

compileJava{
    dependsOn clean
}

compileJava {
    options.compilerArgs.addAll(
            ['--enable-preview'])
}

ext {
//    javaMainClass = "org.sun.ghosh.virtualthreads.MyFavoriteJavaSites"
    javaMainClass = "org.sun.ghosh.virtualthreads.PasswordUtil"
}

application {
    mainClassName = javaMainClass
    applicationDefaultJvmArgs = ["--enable-preview"]
}

run {
//    args = ["PLATFORM"]
//    args = ["VIRTUAL"]
//    args = ["QUICK"]
//    args = ["ALL_OR_NONE"]
//    args = ["SCOPED_VALUE"]
}

dependencies {
}

test {
    useJUnitPlatform()
}